--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ title_separator          : "-"
 subtitle                 : "A Jekyll theme"
 name                     : &name "Michael Rose" # &name is a YAML anchor which can be *referenced later
 description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
-url                      : https://mmistakes.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://airvlab.github.io/grasp-anything # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/docs" # the subpath of your site, e.g. "/blog"
 repository               : "airvlab/grasp-anything"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -84,8 +84,7 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
-    - "https://twitter.com/mmistakes"
-    - "https://www.facebook.com/michaelrose"
+    - "https://twitter.com/anh_nguyen_ai"
 
 # Analytics
 analytics:
