--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "AI & Robot Vision Lab"
 description              : # 
-url                      : https://airvlab.github.io/grasp-anything # "https://www.csc.liv.ac.uk/~anguyen/"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://airvlab.github.io # "https://www.csc.liv.ac.uk/~anguyen/"
+baseurl                  : "/grasp-anything" # the subpath of your site, e.g. "/blog"
 repository               : "airvlab/grasp-anything" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "assets/images/teaser.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
