--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,9 +13,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Grasp-Anything"
 title_separator          : "-"
-subtitle                 : "A Jekyll theme"
-name                     : &name "Michael Rose" # &name is a YAML anchor which can be *referenced later
-description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
+subtitle                 : ""
+name                     : &name "AI & Robot Vision Lab" # &name is a YAML anchor which can be *referenced later
+description              : &description "University of Liverpool."
 url                      : https://airvlab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/grasp-anything" # the subpath of your site, e.g. "/blog"
 repository               : "airvlab/grasp-anything"
