Remove navigation bar

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -24,10 +24,10 @@ main:
     url: /docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Sample Posts"
-    url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
   - title: "Terms &amp; Privacy Policy"
     url: /terms/
 
