--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -28,8 +28,8 @@ main:
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
-  - title: "Terms &amp; Privacy Policy"
-    url: /terms/
+  - title: "License"
+    url: /license/
 
 
 # documentation links
