--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -20,8 +20,8 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
+  - title: "Introduction"
+    url: /docs/introduction/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
@@ -36,8 +36,8 @@ main:
 docs:
   - title: Getting Started
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
+      - title: "Introduction"
+        url: /docs/introduction/
       - title: "Dataset"
         url: /docs/dataset/
       - title: "Code"
