update intro page

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -22,12 +22,14 @@ foo:
 main:
   - title: "Introduction"
     url: /docs/introduction/
-  - title: "About"
-    url: /about/
+  #- title: "About"
+  #  url: /about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
+  - title: "Paper"
+    url: /docs/paper/
   - title: "License"
     url: /docs/license/
 
