Add new datasets

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -36,6 +36,13 @@ docs:
     children:
       - title: "Introduction"
         url: /docs/introduction/
+        children:
+          - title: "Grasp-Anything"
+            url: /docs/grasp-anything
+          - title: "Grasp-Anything++"
+            url: /docs/grasp-anything-pp
+          - title: "Grasp-Anything-6D"
+            url: /docs/grasp-anything-6d
       - title: "Paper"
         url: /docs/paper/
       - title: "Code"
