--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -117,14 +117,14 @@ author:
 
 
 # Site Footer
-# footer:
-#   links:
+footer:
+   links:
 #     - label: "Twitter"
 #       icon: "fab fa-fw fa-twitter-square"
 #       url: "https://twitter.com/mmistakes"
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       url: "https://github.com/mmistakes"
+     - label: "GitHub"
+       icon: "fab fa-fw fa-github"
+       url: "https://github.com/airvlab"
 #     - label: "Instagram"
 #       icon: "fab fa-fw fa-instagram"
 #       url: "https://instagram.com/mmistakes"
