--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -119,12 +119,16 @@ author:
 # Site Footer
 footer:
    links:
-#     - label: "Twitter"
-#       icon: "fab fa-fw fa-twitter-square"
-#       url: "https://twitter.com/mmistakes"
      - label: "GitHub"
        icon: "fab fa-fw fa-github"
        url: "https://github.com/airvlab"
+     - label: "Code"
+       icon: "fab fa-solid fa-code"
+       url: "https://andvg3.github.io/"
+     - label: "Contact"
+       icon: "fab fa-regular fa-message"
+       url: "https://www.csc.liv.ac.uk/~anguyen/"
+       
 #     - label: "Instagram"
 #       icon: "fab fa-fw fa-instagram"
 #       url: "https://instagram.com/mmistakes"
