--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -124,10 +124,10 @@ footer:
        icon: "fab fa-fw fa-github"
        url: "https://github.com/airvlab"
      - label: "Code"
-       icon: "fab fa-fw fa-code"
+       icon: "fas fa-fw fa-link"
        url: "https://andvg3.github.io/"
      - label: "Contact"
-       icon: "fab fa-fw fa-message"
+       icon: "fas fa-fw fa-envelope-square"
        url: "https://www.csc.liv.ac.uk/~anguyen/"
        
 #     - label: "Instagram"
